[tool.poetry]
name = "task-google-news"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{include = "task_google_news"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
selenium = "^4.9.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
